--- a/web/memberRegister.html
+++ b/web/memberRegister.html
@@ -38,6 +38,7 @@ and open the template in the editor.
     <body>
         <section class="container">
             <div class="col-md-8">
+                <h1>Register</h1>
                 <form>
                 <div class="form-group">
                     <label for="fname">First Name:</label>
