updated updatebooks servlet to jaxrs and created updatebooks.jsp with ajax

--- a/web/memberRegister.html
+++ b/web/memberRegister.html
@@ -27,7 +27,7 @@ and open the template in the editor.
                             "email": $("#email").val()}),
                         method: "post",
                         success: function(result) {
-                        if(result === 1) 
+                        if(result) 
                             location.href = "index.html";
                     }
                     });
