--- a/web/index.html
+++ b/web/index.html
@@ -12,5 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content</div>
+        <a href="updateMember.jsp">Edit Profile</a><br>
+        <a href="memberRegister.html">Sign up</a>
     </body>
 </html>
