--- a/web/Admin/adminHome.html
+++ b/web/Admin/adminHome.html
@@ -11,6 +11,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <a href="../books">View Books</a>
+        <a href="../books">View Books</a>&nbsp;&nbsp;
+        <a href ="addBooks.jsp">Add Book</a>&nbsp;&nbsp;
+        <a href="viewMembers.html">View Members</a>
+        
     </body>
 </html>
