added viewrecords servlet and jsp page

--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,9 @@ and open the template in the editor.
     <body>
         <div>TODO write content</div>
         <a href="updateMember.jsp">Edit Profile</a><br>
-        <a href="memberRegister.html">Sign up</a>
+        <a href="memberRegister.html">Sign up</a><br>
+        <a href="./records">View records</a><br>
+        <a href="login.jsp">Login</a><br>
+        <a href="logout.jsp">Logout</a>
     </body>
 </html>
