--- a/web/index.html
+++ b/web/index.html
@@ -9,13 +9,11 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script>
+            window.location.href="login.jsp";
+        </script>
     </head>
     <body>
-        <div>TODO write content</div>
-        <a href="updateMember.jsp">Edit Profile</a><br>
-        <a href="memberRegister.html">Sign up</a><br>
-        <a href="./records">View records</a><br>
-        <a href="login.jsp">Login</a><br>
-        <a href="logout.jsp">Logout</a>
+       
     </body>
 </html>
